more appropriate sol